# Azimuth_II

./: .gitignore  CLAUDE.md  JUPYTER.md  pyproject.toml  references.bib
box_5/: README.md
docs/: azimuth_volume_ii_plan.md  blog.md  dead_tokens_outline.md
lore/: dead-token-gradients.md  five-phases.md  lattice-scale.md  lifecycle-phases.md  notebook-conventions.md  spongecrystal.md
notebooks/: 01.1a_extract_gamma.ipynb  01.1c_save_norms.ipynb  01.1d_generate_control_data.ipynb  01.2b_shell_vs_blob_test.ipynb  01.2d_investigate_spike.ipynb  02.1a_orthographic_projections.ipynb  02.1b_orthographic_spike_colored.ipynb  03.1a_identify_jet.ipynb  03.1b_jet_pca.ipynb  03.2c_investigate_jet_2.ipynb  04.1a_sky_map.ipynb  04.1b_compute_spherical_coords.ipynb  05.1a_identify_tokens_by_direction.ipynb  06.1c_initialization_check.ipynb  06.1e_radial_density_analysis.ipynb  06.1f_knn_density_profile.ipynb  06.1h_primordial_black_holes.ipynb  06.1j_black_hole_survey.ipynb  06.1k_black_hole_neighborhood_visualization.ipynb  06.1m_radial_knn_density_profile.ipynb  06.1p_cuckoo_zone_survey.ipynb  06.1q_cuckoo_radial_analysis.ipynb  06.1r_singularity_sky_map.ipynb  06.1s_singularity_dimensionality.ipynb  06.1t_bh_frame_sky_map.ipynb  06.1v_optimal_sky_map.ipynb  07.2a_general_sky_map.ipynb  07.2b_equatorial_wedge_plot.ipynb  07.3b_identify_black_holes.ipynb  07.3c_compute_radial_distances.ipynb  07.3e_kissing_cluster.ipynb  07.3g_black_holes_vs_kissing_cluster.ipynb  07.3i_decode_degenerate_tokens.ipynb  07.3j_degenerate_corpus_statistics.ipynb  07.3k_full_vocab_thai_analysis.ipynb  (+49 more)
(+530 files in other folders)
