[project]
name = "azimuth-ii"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.11.0",
    "alphabet-detector>=0.0.7",
    "datasets>=4.4.1",
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "ml-dtypes>=0.5.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unidecode>=1.4.0",
]
